autopwn v0.9 - 20150408

* autopwn global configuration file added
 - parallel option (overrides assessment config option)
 - scripts_directory (directory containing tools)
   (currently does nothing)
* screen support
* Split tool stdout and stderr into logs
 - Tools no longer require redirection nonsense

autopwn v0.8 - 20150320

* Changed target file format (had to happen)
* Included URL path option
* Bug fixes

autopwn v0.7 - 20150320

* Added rulesets to tools
* Added pre and post tool execution options
* Started work on (limited) Python code convention adherence
* Added new tools and assessments
* Various bug fixes