@@ -1,0 +1,9 @@
+name: ssl-audit
+menu_name: SSL Audit
+
+tools:
+   - sslyze
+   - sslscan
+   - testsslserver
+
+parallel: 0
