@@ -1,0 +1,6 @@
+name: udp-scan
+tools:
+   - udp-proto-scanner
+
+menu_name: UDP Scanning
+parallel: 0
