@@ -6,3 +6,4 @@ rules:
    target-parameter-exists: ['target_ip','target_protocol']
 
 arguments: "-f D -t {target_protocol}://{target_domain_name} -o {output_dir}/{date}_{target_name}_cmsmap_{target_domain_name}"
+stdout: True
