@@ -6,3 +6,4 @@ rules:
    target-parameter-exists: ['target_ip','target_port_number']
 
 arguments: "-h {target_protocol}://{target_domain_name}:{target_port_number} -root /{target_url} -o {output_dir}/{date}_{target_name}_nikto_{target_domain_name}.txt"
+stdout: True
