@@ -6,3 +6,4 @@ rules:
    target-parameter-exists: ['target_ip']
 
 arguments: "-A -sS -sC -sV -p1-65535 {target_domain_name} -oA {output_dir}/{date}_{target_name}_nmap_full_range_{target_domain_name}"
+stdout: True
