@@ -6,3 +6,4 @@ rules:
    target-parameter-exists: ['target_ip','target_port_number']
 
 arguments: "-o {output_dir}/{date}_{target_name}_skipfish_{target_domain_name} -u -U -O {target_protocol}://{target_domain_name}:{target_port_number}/{target_url}"
+stdout: True
