@@ -7,4 +7,5 @@ rules:
       'target_protocol': 'https'
    target-parameter-exists: ['target_ip','target_port_number']
 
-arguments: "--regular {target_domain_name} > {output_dir}/{date}_{target_name}_sslyze_{target_domain_name}"
+arguments: "--regular {target_domain_name}:{target_port_number} > {output_dir}/{date}_{target_name}_sslyze_{target_domain_name}"
+stdout: False
